[package]
name = "relay_proxy"
version = "1.0.0"
edition = "2021"
authors = ["Abdullahi Ahmad"]
publish = false

[dependencies]
ink = { version = "=4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[lib]
path = "src/lib.rs"

[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
