[package]
name = "rentlock"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
ink = { version = "=4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "rentlock"
path = "src/lib.rs"
crate-type = [ "cdylib" ]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[patch.crates-io]
toml_datetime = "=0.6.3"
toml_edit = "=0.19.15"
